(2/27/12) - v9.0.13 - bugfix
- Fixed: players can again break shops
- Fixed: Physics event no longer blocked
(2/25/12) - v9.0.12 - critical bugfix
- Fixed: infinite loop writting a massive file in update command
- Fixed: no permission for shop chests
- Fixed: Regex wasn't loading right
(2/22/12) - v9.0.11 - bugfix
- Fixed: Currency config didn't read properly
(2/22/12) - v9.0.10 - tweak
- Fixed: Minor logic issue
(2/21/12) - v9.0.9 - event
- Added: Shop destruction event
- Added: Shop interaction event
- Added: Longer currency names. WARNING: If your currency section used longer names, the single character signs WILL NOT WORK!
- Added: Update command
(2/18/12) - v9.0.8 - feature
- Added: Better configuration for shop buy / sell matching
(2/17/12) - v9.0.7 - refactor
- Changed: More code is put into ShopHelpers, cleans up the listener and some shop stuff
- Fixed: Access to double chests is now covered by PhysicalShop
- Added: Better name recognition and output for Monster Eggs (silverfish blocks) and Smooth Brick
(2/17/12) - v9.0.6 - bugfix
- Fixed: No longer create a chest next to a chest that is part of a shop of which you aren't owner
(2/15/12) - v9.0.5 - bugfix
- Fixed: Custom event for shop creation should no longer be thrown if event cancelled
(2/15/12) - v9.0.4 - fixed reload config
- Fixed: Enabling name service when reloading config
- Added: Custom event for when a sign is created
- Added: Custom event for when a shop is created
(2/15/12) - v9.0.3 - more break fixes
- Fixed: fixed all the events that should be able to destroy a shop
(2/15/12) - v9.0.2 - fix from AgentME
- Fixed: Enderman can no longer break shops if shop protection is active
- Fixed: Pistons can no longer break shops if shop protection is active
(2/14/12) - v9.0.1 - fix default config
- Fixed: Now saves a default config
- Changed: Will not load if exception or error is thrown in onEnable()
(2/7/12) - v9.0.0 - major refactor
- Changed default sign format to be much more lenient 