@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wolvereness.physicalshop</groupId>
     <artifactId>PhysicalShop</artifactId>
-    <version>9.0.13</version>
+    <version>9.0.14</version>
     <name>PhysicalShop</name>
     <repositories>
         <repository>
@@ -29,21 +29,21 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.1-R4</version>
+            <version>1.2.4-R0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
 		    <groupId>com.griefcraft</groupId>
 		    <artifactId>LWC</artifactId>
-		    <version>4.0.7</version>
+		    <version>4.1.1</version>
 		    <scope>system</scope>
-		    <systemPath>${project.basedir}/lib/LWC-4.0.7.jar</systemPath>
+		    <systemPath>${project.basedir}/lib/LWC-4.1.1.jar</systemPath>
 		</dependency>
         <dependency>
 		    <groupId>net.milkbowl</groupId>
 		    <artifactId>Vault</artifactId>
-		    <version>1.2.8</version>
+		    <version>1.2.12</version>
 		    <scope>system</scope>
-		    <systemPath>${project.basedir}/lib/Vault-1.2.8.jar</systemPath>
+		    <systemPath>${project.basedir}/lib/Vault-1.2.12.jar</systemPath>
 		</dependency>
         <dependency>
 		    <groupId>de.diddiz</groupId>
@@ -62,9 +62,9 @@
         <dependency>
 		    <groupId>org.yi</groupId>
 		    <artifactId>Lockette</artifactId>
-		    <version>1.4.4</version>
+		    <version>1.6</version>
 		    <scope>system</scope>
-		    <systemPath>${project.basedir}/lib/Lockette-1.4.4.jar</systemPath>
+		    <systemPath>${project.basedir}/lib/Lockette-1.6.jar</systemPath>
 		</dependency>
     </dependencies>
 </project>
